--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 	<body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Infocontact.Ma</h1>
+<p>Bientôt Disponible! </p>
 
 </body>
 	</html>
