--- a/404.html
+++ b/404.html
@@ -1,3 +1,9 @@
 ---
 permalink: /404.html
 ---
+
+<head>
+  
+<meta http-equiv="refresh" content="time; URL=https://infocontact.ma/" />
+  
+</head>
